[REFACTOR/#75] 스터디 조회 API 2N+1 -> 3 쿼리 최소화